add add-grafana ops file

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -550,6 +550,7 @@ jobs:
         fast-deploy-with-downtime-and-danger.yml
 
         add-metric-store.yml
+        add-grafana.yml
         add-syslog-agent.yml
         add-system-metrics-agent.yml
 
