fix DOMAIN property and bump log-stream-cli
Signed-off-by: Max Eshleman <meshleman@pivotal.io>

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -702,7 +702,7 @@ jobs:
     file: loggregator-ci/tasks/check-metrics/task.yml
     params:
       CF_API: https://api.((acceptance_system_domain))
-      DOAMIN: ((acceptance_system_domain))
+      DOMAIN: ((acceptance_system_domain))
       USERNAME: admin
       ORG: system
       SPACE: blackbox-testing
