--- a/pipelines/dependency.yml.erb
+++ b/pipelines/dependency.yml.erb
@@ -1,29 +1,26 @@
 <%
 class Release
-  attr_reader :name, :include_windows, :s3_bucket, :major_version, :release_name
-  def initialize(name, include_windows, s3_bucket, major_version, release_name)
+  attr_reader :name, :include_windows
+  def initialize(name, include_windows)
     @name = name
     @include_windows = include_windows
-    @s3_bucket = s3_bucket
-    @major_version = major_version
-    @release_name = release_name
   end
 end
 
 releases = [
-  Release.new("leadership-election", false, "leadership-election-release-blobs", "1", "Leadership Election"),
-  Release.new("loggregator", false, "loggregator-release-blobs", "1", "Loggregator"),
-  Release.new("loggregator-agent", true, "loggregator-agent-release-blobs", "3", "Loggregator Agent"),
-  Release.new("cf-syslog-drain", false, "cf-syslog-drain-release-blobs", "10", "CF Syslog Drain"),
-  Release.new("statsd-injector", false, "statsd-injector-release-blobs", "1", "Statsd Injector"),
-  Release.new("service-metrics", false, "oss-service-metrics-release-blobs", "1", "Service Metrics"),
-  Release.new("service-logs", false, "service-logs-release-blobs", "1", "Service Logs"),
-  Release.new("metrics-discovery", false, "metrics-discovery-release-blobs", "1", "Metrics Discovery"),
+  Release.new("leadership-election", false),
+  Release.new("loggregator", false),
+  Release.new("loggregator-agent", true),
+  Release.new("cf-syslog-drain", false),
+  Release.new("statsd-injector", false),
+  Release.new("service-metrics", false),
+  Release.new("service-logs", false),
+  Release.new("metrics-discovery", false),
 ]
 
 bump_golang_releases = releases + [
-  Release.new("reference-nozzle", false, "reference-nozzle-release-blobs", "1", "reference-nozzle"),
-  Release.new("log-cache-acceptance-tests", false, "log-cache-acceptance-tests-blobs", "1", "log-cache-acceptance-tests"),
+  Release.new("reference-nozzle", false),
+  Release.new("log-cache-acceptance-tests", false),
 ]
 %>
 
@@ -56,37 +53,6 @@ resources:
   source:
     uri: git@github.com:cloudfoundry/loggregator-ci.git
     private_key: {{loggregator-key}}
-
-- name: loggregator-backport
-  type: git
-  source:
-    uri: git@github.com:cloudfoundry/loggregator-release.git
-    branch: &backport-branch v103.x
-    private_key: {{loggregator-key}}
-
-- name: loggregator-release-backport
-  type: git
-  source:
-    uri: git@github.com:cloudfoundry/loggregator-release.git
-    branch: *backport-branch
-    private_key: {{loggregator-key}}
-    ignore_paths:
-    - .final_builds
-    - releases
-
-- name: cf-syslog-drain-release-backport
-  type: git
-  source:
-    branch: &cf-syslog-backport-branch v7.x
-    uri: git@github.com:cloudfoundry/cf-syslog-drain-release
-    private_key: {{cf-loggregator-oauth-bot-key}}
-
-- name: service-metrics-release-backport
-  type: git
-  source:
-    branch: &service-metrics-release-backport-branch v1.12.x
-    uri: git@github.com:cloudfoundry/service-metrics-release
-    private_key: {{cf-loggregator-oauth-bot-key}}
 
 - name: cf-drain-cli
   type: git
@@ -201,22 +167,6 @@ resources:
     access_token: {{access-token}}
 <% end %>
 
-- name: loggregator-github-release-drafts
-  type: github-release
-  source:
-    user: cloudfoundry
-    repository: loggregator-release
-    access_token: {{access-token}}
-    drafts: true
-
-- name: cf-syslog-drain-github-release-drafts
-  type: github-release
-  source:
-    user: cloudfoundry
-    repository: cf-syslog-drain-release
-    access_token: {{access-token}}
-    drafts: true
-
 jobs:
 - name: bump-golang
   serial: true
@@ -300,73 +250,6 @@ jobs:
       put: slack-alert
       params:
         text_file: slack/message.txt
-
-- name: loggregator-create-backport-release
-  serial: true
-  plan:
-  - get: loggregator-backport
-  - task: create-backport
-    file: loggregator-ci/tasks/backport/loggregator/task.yml
-    params:
-      S3_ACCESS_KEY: {{loggregator-team-s3-access-key}}
-      S3_SECRET_KEY: {{loggregator-team-s3-secret-key}}
-      SSH_KEY: {{loggregator-key}}
-      MAJOR_VERSION: "1"
-      BRANCH_NAME: *backport-branch
-  - put: loggregator-release-backport
-    params:
-      repository: create-final-release/loggregator-backport
-      rebase: false
-  - put: loggregator-github-release-drafts
-    params:
-      name: github-release/name
-      tag: github-release/tag
-      body: github-release/body
-      globs:
-      - github-release/*.tgz
-
-- name: cf-syslog-release-create-backport
-  serial: true
-  plan:
-  - get: cf-syslog-drain-release-backport
-    trigger: false
-  - task: create-backport
-    file: loggregator-ci/tasks/backport/syslog/task.yml
-    params:
-      S3_ACCESS_KEY: {{s3-access-key-id}}
-      S3_SECRET_KEY: {{s3-secret-access-key}}
-      SSH_KEY: {{loggregator-key}}
-      BLOBSTORE_BUCKET: cf-syslog-drain-release-blobs
-      MAJOR_VERSION: "7"
-      BRANCH_NAME: *cf-syslog-backport-branch
-  - put: cf-syslog-drain-release-backport
-    params:
-      repository: create-final-release/cf-syslog-drain-release-backport
-      rebase: false
-  - put: cf-syslog-drain-github-release-drafts
-    params:
-      name: github-release/name
-      tag: github-release/tag
-      body: github-release/body
-      globs:
-      - github-release/*.tgz
-
-- name: service-metrics-create-backport
-  serial: true
-  plan:
-  - get: service-metrics-release-backport
-    trigger: false
-  - get: loggregator-ci
-  - task: create-backport
-    input_mapping:
-      release-repo: service-metrics-release-backport
-    file: loggregator-ci/tasks/create-final-release-backport/task.yml
-    params:
-      S3_ACCESS_KEY: {{s3-access-key-id}}
-      S3_SECRET_KEY: {{s3-secret-access-key}}
-      SSH_KEY: {{loggregator-key}}
-      BLOBSTORE_BUCKET: oss-service-metrics-release-blobs
-      BRANCH_NAME: *service-metrics-release-backport-branch
 
 - name: cf-drain-cli
   serial: true
