switch to master of concourse-tasks

--- a/pipelines/dependency.yml.erb
+++ b/pipelines/dependency.yml.erb
@@ -139,7 +139,7 @@ resources:
 - name: concourse-tasks
   type: git
   source:
-    branch: gcs-bump-golang
+    branch: master
     uri: https://github.com/pivotal-cf/concourse-tasks
 
 - name: golang-release
