add system metrics release
- and default old_tag to first commit if there aren't any tags

--- a/pipelines/release.yml.erb
+++ b/pipelines/release.yml.erb
@@ -19,6 +19,7 @@ releases = [
   Release.new("service-metrics", false, "oss-service-metrics-release-blobs", "Service Metrics"),
   Release.new("service-logs", false, "service-logs-release-blobs", "Service Logs"),
   Release.new("metrics-discovery", false, "metrics-discovery-release-blobs", "Metrics Discovery"),
+  Release.new("system-metrics", true, "system-metrics-release-blobs", "System Metrics"),
 ]
 %>
 
