add system-metrics to dependency pipeline

--- a/pipelines/dependency.yml.erb
+++ b/pipelines/dependency.yml.erb
@@ -16,6 +16,7 @@ releases = [
   Release.new("service-logs", false),
   Release.new("metrics-discovery", false),
   Release.new("log-cache", false),
+  Release.new("system-metrics", true),
 ]
 
 bump_golang_releases = releases + [
