Add other releases to backport pipeline
Signed-off-by: Tom Chen <tochen@pivotal.io>

--- a/pipelines/backport.yml.erb
+++ b/pipelines/backport.yml.erb
@@ -9,11 +9,12 @@ class Release
 end
 
 releases = [
-  Release.new("loggregator", "v103.x", "loggregator-release-blobs"),
-  Release.new("loggregator-agent", "v3.21.x", "loggregator-agent-release-blobs"),
-  Release.new("service-metrics", "v1.12.x", "oss-service-metrics-release-blobs"),
-  Release.new("cf-syslog-drain", "v7.x", "cf-syslog-drain-release-blobs"),
+  Release.new("cf-syslog-drain", "v8.2.x", "cf-syslog-drain-release-blobs"),
+  Release.new("leadership-election", "v1.4.x", "leadership-election-release-blobs"),
   Release.new("log-cache", "v2.1.x", "log-cache-release-blobs"),
+  Release.new("loggregator", "v103.x", "loggregator-release-blobs"),
+  Release.new("loggregator-agent", "v3.14.x", "loggregator-agent-release-blobs"),
+  Release.new("service-metrics", "v1.12.x", "oss-service-metrics-release-blobs"),
 ]
 %>
 
