--- a/pipelines/release.yml.erb
+++ b/pipelines/release.yml.erb
@@ -67,6 +67,7 @@ resources:
     branch: develop
     private_key: {{cf-loggregator-oauth-bot-key}}
     disable_ci_skip: true
+    clean_tags: true
 
 - name: <%= release.name %>-release-master
   type: git
