--- a/pipelines/backport.yml.erb
+++ b/pipelines/backport.yml.erb
@@ -1,22 +1,39 @@
 <%
 class Release
-  attr_reader :name, :backport_branch, :s3_bucket
-  def initialize(name, backport_branch, s3_bucket)
+  attr_reader :name, :backport_branches, :s3_bucket
+  def initialize(name, backport_branches, s3_bucket)
     @name = name
     @s3_bucket = s3_bucket
-    @backport_branch = backport_branch
+    @backport_branches = backport_branches
   end
 end
 
 releases = [
-  Release.new("cf-syslog-drain", "v8.2.x", "cf-syslog-drain-release-blobs"),
-  Release.new("leadership-election", "v1.4.x", "leadership-election-release-blobs"),
-  Release.new("log-cache", "v2.1.x", "log-cache-release-blobs"),
-  Release.new("loggregator", "v103.x", "loggregator-release-blobs"),
-  Release.new("loggregator-agent", "v3.16.x", "loggregator-agent-release-blobs"),
-  Release.new("service-metrics", "v1.12.x", "oss-service-metrics-release-blobs"),
+  Release.new("cf-syslog-drain", %w(v8.2.x v10.2.x), "cf-syslog-drain-release-blobs"),
+  Release.new("leadership-election", %w(v1.4.x), "leadership-election-release-blobs"),
+  Release.new("log-cache", %w(v2.1.x), "log-cache-release-blobs"),
+  Release.new("loggregator", %w(v103.x v105.5.x v105.6.x), "loggregator-release-blobs"),
+  Release.new("loggregator-agent", %w(v2.3.x v3.16.x v3.21.x), "loggregator-agent-release-blobs"),
+  Release.new("service-metrics", %w(v1.12.x), "oss-service-metrics-release-blobs"),
 ]
 %>
+
+groups:
+- name: all
+  jobs:
+<% releases.sort_by { |release| release.name }.each do |release| %>
+<% release.backport_branches.each do |backport_branch| %>
+  - <%= release.name %>-create-backport-<%= backport_branch %>
+<% end %>
+<% end %>
+
+<% releases.sort_by { |release| release.name }.each do |release| %>
+- name: <%= release.name %>
+  jobs:
+<% release.backport_branches.each do |backport_branch| %>
+  - <%= release.name %>-create-backport-<%= backport_branch %>
+<% end %>
+<% end %>
 
 resources:
 - name: loggregator-ci
@@ -26,12 +43,14 @@ resources:
     private_key: {{loggregator-key}}
 
 <% releases.each do |release| %>
-- name: <%= release.name %>-release-backport
+<% release.backport_branches.each do |backport_branch| %>
+- name: <%= release.name %>-release-backport-<%= backport_branch %>
   type: git
   source:
-    branch: <%= release.backport_branch %>
+    branch: <%= backport_branch %>
     uri: git@github.com:cloudfoundry/<%= release.name %>-release
     private_key: {{cf-loggregator-oauth-bot-key}}
+<% end %>
 
 - name: <%= release.name %>-github-release-drafts
   type: github-release
@@ -44,15 +63,16 @@ resources:
 
 jobs:
 <% releases.each do |release| %>
-- name: <%= release.name %>-create-backport
+<% release.backport_branches.each do |backport_branch| %>
+- name: <%= release.name %>-create-backport-<%= backport_branch %>
   serial: true
   plan:
-  - get: <%= release.name %>-release-backport
+  - get: <%= release.name %>-release-backport-<%= backport_branch %>
     trigger: false
   - get: loggregator-ci
   - task: create-backport
     input_mapping:
-      release-repo: <%= release.name %>-release-backport
+      release-repo: <%= release.name %>-release-backport-<%= backport_branch %>
     file: loggregator-ci/tasks/create-final-release/backport/task.yml
     params:
       S3_ACCESS_KEY: {{s3-access-key-id}}
@@ -60,8 +80,8 @@ jobs:
       JSON_KEY: {{gcp-service-account-key}}
       SSH_KEY: {{loggregator-key}}
       BLOBSTORE_BUCKET: <%= release.s3_bucket %>
-      BRANCH_NAME: <%= release.backport_branch %>
-  - put: <%= release.name %>-release-backport
+      BRANCH_NAME: <%= backport_branch %>
+  - put: <%= release.name %>-release-backport-<%= backport_branch %>
     params:
       repository: repos/release-repo
       rebase: false
@@ -72,4 +92,5 @@ jobs:
       body: github-release/body
       globs:
       - github-release/*.tgz
+<% end %>
 <% end %>
