clarify release triggering
Signed-off-by: Caitlyn Yu <cyu@pivotal.io>

--- a/pipelines/release.yml.erb
+++ b/pipelines/release.yml.erb
@@ -138,6 +138,7 @@ jobs:
   serial: true
   plan:
   - in_parallel:
+    # release-master only gets new versions if the src/version file is changed
     - get: <%= release.name %>-release-master
       trigger: true
     - get: loggregator-ci
