--- a/pipelines/release.yml.erb
+++ b/pipelines/release.yml.erb
@@ -19,6 +19,7 @@ releases = [
   Release.new("service-logs", false, "service-logs-release-blobs", "Service Logs"),
   Release.new("metrics-discovery", false, "metrics-discovery-release-blobs", "Metrics Discovery"),
   Release.new("system-metrics", true, "system-metrics-release-blobs", "System Metrics"),
+  Release.new("system-metrics-scraper", true, "system-metrics-scraper-release-blobs", "System Metrics Scraper"),
 ]
 %>
 
