remove kiwi and add version-trigger resource

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -1,7 +1,7 @@
 <%
 bosh_releases = %w(loggregator loggregator-agent statsd-injector log-cache metrics-discovery system-metrics system-metrics-scraper)
 standalone_releases = %w(service-metrics service-logs)
-dev_envs = %w(kiwi banana papaya)
+dev_envs = %w(banana papaya)
 
 cfd_smoke_tests = %w(cats cfar-lats test-metrics-agent)
 log_cache_smoke_tests = %w(cats cfar-lats lcats test-metrics-agent)
