fix merge back to develop
Signed-off-by: Max Eshleman <meshleman@pivotal.io>

--- a/pipelines/release.yml.erb
+++ b/pipelines/release.yml.erb
@@ -82,16 +82,6 @@ resources:
     disable_ci_skip: true
     clean_tags: true
 
-- name: <%= release.name %>-release-master-version-trigger
-  type: git
-  source:
-    uri: git@github.com:cloudfoundry/<%= release.name %>-release
-    branch: master
-    clean_tags: true
-    private_key: {{cf-loggregator-oauth-bot-key}}
-    paths:
-    - src/version
-
 - name: <%= release.name %>-release-master
   type: git
   source:
@@ -179,14 +169,14 @@ jobs:
   plan:
   - in_parallel:
     # release-master only gets new versions if the src/version file is changed
-    - get: <%= release.name %>-release-master-version-trigger
-      trigger: true
+    - get: <%= release.name %>-release-master
     - get: loggregator-ci
     - get: <%= release.name %>-version
+      trigger: true
   - task: create-final-release
     file: loggregator-ci/tasks/create-final-release/master/task.yml
     input_mapping:
-      master-repo: <%= release.name %>-release-master-version-trigger
+      master-repo: <%= release.name %>-release-master
       version: <%= release.name %>-version
     params:
       S3_ACCESS_KEY: {{s3-access-key-id}}
@@ -230,7 +220,7 @@ jobs:
   plan:
   - in_parallel:
     - get: <%= release.name %>-release
-    - get: <%= release.name %>-release-master-version-trigger
+    - get: <%= release.name %>-release-master
       passed: [ <%= release.name %>-create-final-release ]
     - get: loggregator-ci
     - get: <%= release.name %>-github-release-published
@@ -238,7 +228,7 @@ jobs:
   - task: merge-back-to-develop
     file: loggregator-ci/tasks/merge-to-develop/task.yml
     input_mapping:
-      master-repo: <%= release.name %>-release-master-version-trigger
+      master-repo: <%= release.name %>-release-master
       develop-repo: <%= release.name %>-release
     params:
       SSH_KEY: {{loggregator-key}}
