--- a/pipelines/release.yml.erb
+++ b/pipelines/release.yml.erb
@@ -28,9 +28,6 @@ groups:
   jobs:
   <% releases.sort_by { |release| release.name }.each do |release| %>
   - <%= release.name %>-bumper-check
-  - <%= release.name %>-cut-patch
-  - <%= release.name %>-cut-minor
-  - <%= release.name %>-cut-major
   - <%= release.name %>-create-final-release
   - <%= release.name %>-merge-to-develop
   - auto-<%= release.name %>-cut-patch-if-trivial-commits
@@ -90,6 +87,16 @@ resources:
     clean_tags: true
     private_key: {{cf-loggregator-oauth-bot-key}}
 
+- name: <%= release.name %>-release-master-version
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/<%= release.name %>-release
+    branch: master
+    clean_tags: true
+    private_key: {{cf-loggregator-oauth-bot-key}}
+    paths:
+    - src/version
+
 - name: <%= release.name %>-github-release-drafts
   type: github-release
   source:
@@ -147,20 +154,14 @@ jobs:
 
 - name: <%= release.name %>-cut-patch
   plan:
-  - get: <%= release.name %>-release-master
-    passed: [<%= release.name %>-bumper-check]
   - put: <%= release.name %>-version
     params: {bump: patch}
 - name: <%= release.name %>-cut-minor
   plan:
-  - get: <%= release.name %>-release-master
-    passed: [<%= release.name %>-bumper-check]
   - put: <%= release.name %>-version
     params: {bump: minor}
 - name: <%= release.name %>-cut-major
   plan:
-  - get: <%= release.name %>-release-master
-    passed: [<%= release.name %>-bumper-check]
   - put: <%= release.name %>-version
     params: {bump: major}
 
@@ -168,16 +169,13 @@ jobs:
   serial: true
   plan:
   - in_parallel:
-    # release-master only gets new versions if the src/version file is changed
-    - get: <%= release.name %>-release-master
-    - get: loggregator-ci
-    - get: <%= release.name %>-version
+    - get: <%= release.name %>-release-master-version
       trigger: true
+    - get: loggregator-ci
   - task: create-final-release
     file: loggregator-ci/tasks/create-final-release/master/task.yml
     input_mapping:
-      master-repo: <%= release.name %>-release-master
-      version: <%= release.name %>-version
+      master-repo: <%= release.name %>-release-master-version
     params:
       S3_ACCESS_KEY: {{s3-access-key-id}}
       S3_SECRET_KEY: {{s3-secret-access-key}}
