test syslog agent cf-deployment
Signed-off-by: Tom Chen <tochen@pivotal.io>

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -129,7 +129,7 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/cf-deployment
-    branch: master
+    branch: syslog-adapter-to-agent
     private_key: ((loggregator-key))
 
 - name: cf-deployment-concourse-tasks
@@ -561,7 +561,6 @@ jobs:
 
         experimental/add-metric-store.yml
         denver/add-grafana.yml
-        experimental/add-syslog-agent.yml
         system-metrics/add-system-metrics-agent.yml
         system-metrics-scraper/add-system-metrics-scraper.yml
 
@@ -572,14 +571,12 @@ jobs:
 
         windows1803-cell.yml
         use-latest-windows1803-stemcell.yml
-        experimental/add-syslog-agent-windows1803.yml
         experimental/add-system-metrics-agent-windows1803.yml
         experimental/use-logcache-syslog-ingress-windows1803.yml
 
         windows2019-cell.yml
         use-online-windows2019fs.yml
         use-latest-windows2019-stemcell.yml
-        experimental/add-syslog-agent-windows2019.yml
         experimental/add-system-metrics-agent-windows2019.yml
         experimental/use-logcache-syslog-ingress-windows2019.yml
 
